[Bug #77120] Handle OCI_SUCCESS_WITH_INFO returned from OCISessionBegin

1. Proceed with connection initialization if OCI_SUCCESS_WITH_INFO is returned
2. Do not throw an exception upon OCI_SUCCESS_WITH_INFO